--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -18,8 +18,8 @@ social:
 - {icon: 'twitter', link: 'https://twitter.com/friel_emmet'}
 - {icon: 'linkedin', link: 'http://www.linkedin.com/in/efrielcsit2894/'}
 #- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
-- {icon: 'rss-square', link: '/feed.xml'}
-#- {icon: 'rss-square', link: '/rss-feed.xml'}
+#- {icon: 'rss-square', link: '/feed.xml'}
+- {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
 pagination:
