--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,11 +4,11 @@ disqus:
   disqus_shortname: 'https-lenpaul-github-io-lagrange'
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: ''
+#google-ID: ''
 
 menu:
 - {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Projects', path: 'menu', url: 'projects.html'}
+- {name: 'Stuff', path: 'menu', url: 'projects.html'}
 - {name: 'News', path: 'menu', url: 'news.html'}
 - {name: 'Contact', path: 'menu', url: 'contact.html'}
 
@@ -28,6 +28,6 @@ pagination:
 
 sharing_button_prompt: 'Feel free to share!'
 
-#related_posts: 'You may also enjoy:'
+related_posts: 'You may also enjoy:'
 
 post_date_prefix: 'Written on'
