--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,7 @@ url: "emmetfriel.github.io"
 baseurl: "/ef_blog"
 
 # jekyll-paginate configuration
-pagination:
-  enabled: true
-  per_page: 5
-  permalink: '/page/:num'
+paginate: 5
 
 # Build settings
 markdown:            kramdown
