--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@ url: "emmetfriel.github.io"
 baseurl: "/ef_blog"
 
 # jekyll-paginate configuration
-paginate: 5
+paginate: 3
+paginate_path: "/blog/page:num/"
 
 # Build settings
 markdown:            kramdown
