--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -23,8 +23,8 @@ social:
 
 # Customize site text
 pagination:
-  paginate: 3
-  paginate_path: "/blog/page:num/" 
+  #paginate: 3
+  #paginate_path: "/blog/page:num/" 
   next_page: 'Next'
   previous_page: 'Back'
 
