--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 #github pages name
 url: "emmetfriel.github.io"
-baseurl: "/ef_blog"
+baseurl: "/blog"
 
 # jekyll-paginate configuration
 paginate: 4
