--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,9 +8,10 @@ disqus:
 
 menu:
 - {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Posts', path: 'menu', url: 'projects.html'}
+- {name: 'Posts', path: 'menu', url: 'posts.html'}
 - {name: 'News', path: 'menu', url: 'news.html'}
 - {name: 'Contact', path: 'menu', url: 'contact.html'}
+- {name: 'Archives', path: 'menu', url: 'archives-posts.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
