Updated ansible-vault.md post and docker-compose.ym

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # docker run --name blog --rm --volume=$PWD:/srv/jekyll -p 4000:4000 -it jekyll/jekyll:4.0 jekyll serve
-
+---
 version: '3'
 
 services:
@@ -9,4 +9,4 @@ services:
             - '.:/srv/jekyll'
         ports: 
             - 4000:4000
-        command: 'jekyll serve'
+        command: bash -c "jekyll build && jekyll serve"
